# pyads

./: .checkignore  .coveralls.yml  .flake8  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  PKG-INFO  Pipfile  README.md  lint.py  mypy.ini  pyads.sublime-project  pyproject.toml  readme.txt  requirements.in  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.py  tox.ini
.github/workflows/: ci.yml  packaging.yml  python-publish.yml
adsPy/: __init__.py  adsPy.py  constants.py  gui.py
adsPy/doc/: adsPy-module.html  adsPy-pysrc.html  adsPy.adsPy-module.html  adsPy.adsPy-pysrc.html  adsPy.constants-module.html  adsPy.constants-pysrc.html  adsPy.constants.AdsVersion-class.html  adsPy.constants.AmsAddr-class.html  adsPy.constants.SAdsNotificationAttrib-class.html  adsPy.constants.SAdsVersion-class.html  adsPy.constants.SAmsAddr-class.html  adsPy.constants._SAmsAddr-class.html  adsPy.gui-module.html  adsPy.gui-pysrc.html  adsPy.gui.ADSMapper-class.html  adsPy.gui.PLCObject-class.html  api-objects.txt  class-tree.html  frames.html  help.html  identifier-index.html  index.html  module-tree.html  redirect.html  toc-adsPy-module.html  toc-adsPy.adsPy-module.html  toc-adsPy.constants-module.html  toc-adsPy.gui-module.html  toc-everything.html  toc.html
adsPy/test/: test.py
doc/: Makefile  changelog.md  conf.py  index.rst  installation.md  make.bat  pyads.rst  quickstart.md  quickstart.rst
doc/documentation/: connection.rst  index.rst  routing.rst  symbols.md  symbols.rst  testserver.rst
doc/source/: conf.py  index.rst  modules.rst  pyads.rst
pyads/: __init__.py  _version.py  ads.py  connection.py  connector.py  constants.py  errorcodes.py  filetimes.py  gui.py  pyads.py  pyads_ex.py  structs.py  symbol.py  testserver.py  testserver_ex.py  utils.py
pyads/test/: test.py
pyads/testserver/: __init__.py  __main__.py  advanced_handler.py  basic_handler.py  handler.py  testserver.py
pyads/testserver_ex/: client.py  clientconn.py  handler.py  server.py  structs.py
requirements/: Makefile  base.txt  devel.in  devel.txt
src/: Makefile  README.md
src/AdsLib/: AdsLib.h
src/pyads/: __init__.py  ads.py  connection.py  constants.py  errorcodes.py  errorcodes_nc.py  filetimes.py  pyads_ex.py  structs.py  symbol.py  typed_symbols.py  utils.py
src/pyads/testserver/: __main__.py  advanced_handler.py  basic_handler.py  handler.py  testserver.py
tests/: __init__.py  conftest.py  live_ads_config.example.json  test_ads.py  test_connection_class.py  test_filetimes.py  test_integration.py  test_plc_ams.py  test_plc_route.py  test_pyads.py  test_symbol.py  test_testserver.py  test_testserver_ex_structs.py  test_typed_symbols.py  test_typed_symbols_live.py  test_utils.py
tests/utils/: testserver.py
