[project]
name = "pyads"
description = "Python wrapper for TwinCAT ADS library"
authors = [
    { name = "Stefan Lehmann", email = "Stefan.St.Lehmann@gmail.com" },
]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
license = { text = "MIT" }
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/MrLeeh/pyads"
Documentation = "https://pyads.readthedocs.io"

[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pyads", "pyads.testserver"]
package-dir = { ""= "src" }

[tool.setuptools.package-data]
pyads = [
    "adslib.so",
    "adslib/**",
]

[tool.setuptools.dynamic]
version = {attr = "pyads.__version__"}

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py37, py38, py39, py310

    [testenv]
    commands = discover
    deps = discover
    changedir = tests
    whitelist_externals=*
    passenv = TWINCAT3DIR

    [pytest]
    testpaths = tests
"""

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310"]
include = ".pyi?$"
exclude = """
(
  /(
      .eggs
    | .git
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
    | adslib
    | pyads.egg-info
  )/
  | pyads/__init__.py
)
"""

[tool.pydocstyle]
ignore = ["D105", "D213", "D203", "D107"]

[tool.coverage.run]
include = ["pyads/*"]
omit = ["pyads/testserver/__main__.py"]
